-------------------------------------------------------------------
Thu Aug 14 20:21:26 CEST 2014 - Sebastian Siebert <freesapcer@gmx.de>

- switched to use of update-alternatives for sle12 and openSUSE > 13.1
- moved (use of) switchlibglx/switchlibGL from core to graphics subpackage
- make use of update-alternatives in switchlibglx
- added sle12 as supported OS
(Thanks to Stefan Dirsch from SUSE for the patch)

-------------------------------------------------------------------
Tue Aug 12 21:07:48 CEST 2014 - Sebastian Siebert <freesapcer@gmx.de>

- add same required version of the dependencies like the meta package

-------------------------------------------------------------------
Mon Aug 11 23:50:44 CEST 2014 - Sebastian Siebert <freesapcer@gmx.de>

- rewrite fglrx spec file to split up into 5 fglrx packages:
  - fglrx-core
  - fglrx-graphics (depends on fglrx-core)
  - fglrx-amdcccle (depends on fglrx-core and fglrx-graphics)
  - fglrx-opencl   (depends on fglrx-core)
  - fglrx-xpic = Meta package that depends on all above called
                 packages (like old behaviour)
- add more parameters in ati-packager.sh to build only needed
  packages (is passed by the amd installer).
  - Parameter:
    --NoXServer = fglrx-core
    --graphics  = fglrx-core, fglrx-graphics
    --amdcccle  = fglrx-core, fglrx-graphics, fglrx-amdcccle
    --OpenCL    = fglrx-core, fglrx-opencl
- add obsolete fglrx packages from older SLE systems

-------------------------------------------------------------------
Mon Jul  7 23:17:08 CEST 2014 - Sebastian Siebert <freespacer@gmx.de>

- adjust the right permission for /usr/bin/amd-console-helper
- add obsolete fglrx packages from older openSUSE systems

-------------------------------------------------------------------
Mon Jan 06 05:31:53 CET 2014 - Sebastian Siebert <freespacer@gmx.de>

- private Qt-libaries should not be provided

-------------------------------------------------------------------